<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.rjgames.UploadScreenshotActivity">
    <include layout="@layout/background_layout"/>
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                >





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:textColor="#fff"
                        android:id="@+id/tx1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:text="Account Details"
                        android:textSize="15dp"
                        />

                    <LinearLayout
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            >

                            <TextView
                                android:id="@+id/tv_acc_holder"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="Account"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textSize="14dp" />
                            <TextView
                                android:id="@+id/tv_acc_details"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text="Account"
                                android:layout_below="@+id/tv_acc_holder"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textSize="14dp" />

                             </RelativeLayout>





                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    >

                    <TextView
                        android:textColor="#fff"
                        android:id="@+id/tx12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:text="@string/txt_qr_code"
                        android:textSize="15dp"
                        />
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/txt_qr_text"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" />

                    <ImageView
                        android:id="@+id/img_qr"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="300dp"
                        android:layout_height="300dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    >
                    <TextView
                        android:textColor="#fff"
                        android:id="@+id/tx13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:text="Transation Details"
                        android:textSize="15dp"
                        />

                    <TextView
                        android:visibility="gone"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:text="Enter Transaction Amount"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />
                    <EditText
                        android:visibility="gone"
                        android:layout_margin="10dp"
                        android:id="@+id/et_amount"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_trans_amt"
                        android:textSize="16dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:text="Enter Transaction Id"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />
                    <EditText
                        android:layout_margin="10dp"
                        android:id="@+id/et_trans_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_trans_id"
                        android:textSize="16dp"
                        android:maxLines="1"
                        android:singleLine="true" />


                    <LinearLayout
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:weightSum="10"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:layout_weight="4"
                            android:background="@color/black"
                            android:layout_width="0dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="1dp"/>
                        <TextView
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:text="or"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />
                        <View
                            android:layout_gravity="center_vertical"
                            android:layout_weight="4"
                            android:background="@color/black"
                            android:layout_width="0dp"
                            android:layout_height="1dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:weightSum="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textAlignment="center"
                            android:layout_centerVertical="true"
                            android:text="@string/txt_choose_screenshot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlCompat" />

                        <ImageView
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/img_screenshot"
                            android:layout_width="120dp"
                            android:src="@drawable/upload_docs"
                            android:layout_height="100dp"/>
                        <RelativeLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content">
                            <RelativeLayout
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <Button
                                    android:layout_width="wrap_content"
                                    android:text="@string/btn_choose"
                                    android:textColor="@color/white"
                                    android:layout_margin="5dp"
                                    android:textSize="12dp"
                                    android:textAllCaps="false"
                                    android:id="@+id/btn_choose"
                                    android:background="@drawable/dialog_buttons"
                                    android:backgroundTint="@android:color/holo_red_dark"
                                    android:layout_height="40sp"/>
                                <Button
                                    android:layout_toRightOf="@id/btn_choose"
                                    android:layout_width="wrap_content"
                                    android:text="@string/btn_cancel"
                                    android:textColor="@color/white"
                                    android:layout_margin="5dp"
                                    android:textAllCaps="false"
                                    android:id="@+id/btn_cancel"
                                    android:backgroundTint="@android:color/holo_red_dark"
                                    android:background="@drawable/dialog_buttons"
                                    android:layout_height="40sp"/>
                            </RelativeLayout>
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/dialog_buttons"
                        android:backgroundTint="@color/white"
                        android:text="Save"
                        android:textSize="18dp"
                        android:layout_margin="10dp"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
